# robot_project

./: README.md
integratie_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
integratie_ws/devel/include/depthai_ros_driver/: parametersConfig.h
integratie_ws/devel/include/robotarm/: manipulatorAction.h  manipulatorActionFeedback.h  manipulatorFeedback.h
integratie_ws/devel/include/transportsysteem_pkg/: SystemControlActionFeedback.h  SystemControlActionResult.h  SystemControlGoal.h  TransportControlAction.h  TransportControlActionFeedback.h  TransportControlActionGoal.h  TransportControlActionResult.h  TransportControlFeedback.h  TransportControlGoal.h  TransportControlResult.h
integratie_ws/devel/include/xarm_msgs/: MoveVelocityRequest.h  VacuumGripperCtrlRequest.h  VacuumGripperCtrlResponse.h  VeloMoveMsg.h
integratie_ws/devel/lib/d435i_xarm_setup/: findobj2d_grasp_api  findobj2d_grasp_moveit  obj2base
integratie_ws/devel/lib/pkgconfig/: camera_demo.pc  d435i_xarm_setup.pc  depthai_bridge.pc  depthai_examples.pc  depthai_ros_driver.pc  depthai_ros_msgs.pc  dual_xarm6_moveit_config.pc  hmi_interface.pc  hoofd_pkg.pc  lite6_moveit_config.pc  main_pkg.pc  multi_xarm5.pc  my_depthai.pc  my_lite6_description.pc  my_lite6_moveit_config.pc  robotarm.pc  run_recorded_traj.pc  transportsysteem_pkg.pc  uf_robot_moveit_config.pc  xarm5_gripper_moveit_config.pc  xarm5_moveit_config.pc  xarm5_vacuum_gripper_moveit_config.pc  xarm6_gripper_moveit_config.pc  xarm6_moveit_config.pc  xarm6_vacuum_gripper_moveit_config.pc  xarm7_gripper_moveit_config.pc  xarm7_moveit_config.pc  xarm7_redundancy_res.pc  xarm7_vacuum_gripper_moveit_config.pc  xarm_api.pc  xarm_bringup.pc  xarm_controller.pc  xarm_description.pc  xarm_gazebo.pc  xarm_gripper.pc  xarm_moveit_servo.pc  xarm_msgs.pc  xarm_planner.pc  xarm_sdk.pc
integratie_ws/devel/lib/run_recorded_traj/: xarm_traj_test
integratie_ws/devel/lib/xarm_api/: ======test_xarm_ros_client  ======test_xarm_states  ======xarm_driver_node  example1_report_norm  move_test  servo_cartesian_test  test_tool_modbus  test_xarm_velo_move
integratie_ws/devel/lib/xarm_controller/: sample_motion  uf_ros_controller  xarm_combined_traj_controller
integratie_ws/devel/lib/xarm_gripper/: gripper_action_server  gripper_client
integratie_ws/devel/lib/xarm_moveit_servo/: ======xarm_joy_to_servo_node  ======xarm_keyboard_to_servo_node
integratie_ws/devel/lib/xarm_planner/: ======xarm_simple_planner  ======xarm_simple_planner_test  xarm_gripper_planner
integratie_ws/src/hmi_interface/launch/: hmi.launch
integratie_ws/src/hmi_interface/scripts/: hmi_control_panel.py  start_hmi.sh
integratie_ws/src/hmi_interface/templates/: hmi_gui.html
integratie_ws/src/hoofd_pkg/: CMakeLists.txt
integratie_ws/src/main_pkg/: CMakeLists.txt
integratie_ws/src/my_depthai/: README.MD
integratie_ws/src/my_lite6_description/: CMakeLists.txt
integratie_ws/src/my_lite6_moveit_config/: .setup_assistant
integratie_ws/src/robotarm/: CMakeLists.txt
integratie_ws/src/robotarm/launch/: robotcel.launch
integratie_ws/src/robotarm/mesh/: Opstelling.STL  robotwand.STL  sorteerbakken.STL  tandenborstel.dae  tandenborstel.stl  vacuumpomp.STL  wand.STL
integratie_ws/src/robotarm/scripts/: classes.py  manipulator.py  posities_bepalen_van_sorteerbakken.py  vision.py
integratie_ws/src/transportsysteem_pkg/: CMakeLists.txt  package.xml
integratie_ws/src/transportsysteem_pkg/action/: TransportControl.action
integratie_ws/src/transportsysteem_pkg/launch/: transportsystem_control.launch
integratie_ws/src/transportsysteem_pkg/scripts/: controller_transportsystem.py
marijn_werk_ws/src/test_pkg/: package.xml
pim_hmi_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
pim_hmi_ws/src/hmi_interface/: CMakeLists.txt
pim_werk_ws/devel/: .catkin  _setup_util.py  setup.sh
raph_werk_ws/devel/: .catkin  .rosinstall
raph_werk_ws/program_pkg/: CMakeLists.txt  package.xml
raph_werk_ws/src/arduino_nodes/: CMakeLists.txt  package.xml
raph_werk_ws/src/my_test_pkg/: CMakeLists.txt  package.xml
ruben_werk_ws/devel/: .catkin  setup.sh
ruben_werk_ws/src/package/: CMakeLists.txt
ufactory_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ufactory_ws/logs/depthai_ros_driver/: build.make.000.log.stderr
ufactory_ws/logs/my_depthai/: build.symlink.000.log.stderr
ufactory_ws/src/my_xarm_lite6/: README.MD
ufactory_ws/src/my_xarm_lite6/robotarm/: package.xml
ufactory_ws/src/my_xarm_lite6/robotarm/action/: manipulator.action
ufactory_ws/src/my_xarm_lite6/robotarm/mesh/: Opstelling.STL  oud.STL  wand.STL
ufactory_ws/src/my_xarm_lite6/robotarm/scripts/: hoofdprogramma.py  manipulator.py  vision.py
(+1194 files in other folders)
